--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
     "type": "project",
     "require": {
         "php": "^7.3|^8.0",
-        "laravel/lumen-framework": "^8.3.1"
+        "doctrine/dbal": "^3.3",
+        "flipbox/lumen-generator": "^9.1",
+        "fruitcake/laravel-cors": "^3.0",
+        "laravel/lumen-framework": "^8.3.1",
+        "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
