--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,23 @@ APP_TIMEZONE=UTC
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_CONNECTION=pgsql
+DB_HOST=host.docker.internal
+DB_PORT=5433
+DB_DATABASE=project
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
+
+CORS_PATHS=
+CORS_ALLOWED_METHODS=
+CORS_ALLOWED_ORIGINS=
+CORS_ALLOWED_ORIGINS_PATTERNS=
+CORS_ALLOWED_HEADERS=
+CORS_EXPOSED_HEADERS=
+DB_QUERY_LOG=
+
+JWT_SECRET=
+JWT_TTL=
