--- a/.env.example
+++ b/.env.example
@@ -11,19 +11,20 @@ LOG_SLACK_WEBHOOK_URL=
 DB_CONNECTION=pgsql
 DB_HOST=host.docker.internal
 DB_PORT=5433
-DB_DATABASE=project
+DB_DATABASE=<APP NAME>
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 
-CORS_PATHS=
-CORS_ALLOWED_METHODS=
-CORS_ALLOWED_ORIGINS=
-CORS_ALLOWED_ORIGINS_PATTERNS=
-CORS_ALLOWED_HEADERS=
-CORS_EXPOSED_HEADERS=
+CORS_PATHS='["*"]'
+CORS_ALLOWED_METHODS='["*"]'
+CORS_ALLOWED_ORIGINS='["*"]'
+CORS_ALLOWED_ORIGINS_PATTERNS='[]'
+CORS_ALLOWED_HEADERS='["*"]'
+CORS_EXPOSED_HEADERS='[]'
+
 DB_QUERY_LOG=
 
 JWT_SECRET=
