--- a/nginx.conf
+++ b/nginx.conf
@@ -5,29 +5,58 @@ events {
 }
 
 http {
+    include mime.types;
+    default_type application/octet-stream;
     sendfile on;
-
-    upstream app {
-        server app:8080;
-    }
+    keepalive_timeout 65;
+    gzip on;
 
     server {
-        listen 8080;
-        server_name localhost;
+        listen {{PORT}};
+        server_name _;
 
         root /app/public;
         index index.php;
 
+        charset utf-8;
+
         location / {
-            try_files $uri $uri/ /index.php?$query_string;
+            try_files $uri /index.php?$query_string;
+        }
+
+        location = /favicon.ico {
+            access_log off;
+            log_not_found off;
+        }
+
+        location = /robots.txt {
+            access_log off;
+            log_not_found off;
         }
 
         location ~ \.php$ {
-            try_files $uri /index.php =404;
-            fastcgi_pass app:9000;
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            fastcgi_pass unix:/var/run/php/php8.0-fpm.sock;
             fastcgi_index index.php;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_param PATH_INFO $fastcgi_path_info;
+            internal;
         }
+
+        location ~ /\.(?!well-known).* {
+            deny all;
+        }
+
+        error_page 404 /index.php;
+
+        location ~ \.(js|css|png|jpg|jpeg|gif|ico|svg)$ {
+            try_files $uri /index.php?$query_string;
+            expires max;
+            log_not_found off;
+        }
+
+        access_log off;
+        error_log /dev/stderr;
     }
 }
