--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ http {
     gzip on;
 
     server {
-        listen {{PORT}};
+        listen 8080;
         server_name _;
 
         root /app/public;
