--- a/.env.example
+++ b/.env.example
@@ -18,7 +18,7 @@ DB_PASSWORD=postgres
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 
-CORS_PATHS='["*"]'
+CORS_PATHS='[]'
 CORS_ALLOWED_METHODS='["*"]'
 CORS_ALLOWED_ORIGINS='["*"]'
 CORS_ALLOWED_ORIGINS_PATTERNS='[]'
